# yarr

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Dockerfile  build.js  build.md  build.sh  bundle.go  docker-compose.yaml  docker-compose.yml  dockerfile  dockerfile.arm  go.mod  go.sum  hacking.md  license  main.go  makefile  package-lock.json  package.json  readme.md  tsconfig.json  windows_build.bat  yarr-version.txt  yarrd.go
.github/workflows/: build-docker-image  build-docker-image.yml  (+10 more)
ai/: __init__.py  article_extractor.py  briefing.py  chat.py  chunker.py  cluster.py  config.py  dedup.py  indexer.py  main.py  providers.py  pyproject.toml  routes.py  search.py  store.py  tagger.py  yarr_db.py
ai/scripts/: migrate_clusters.py
artwork/: versioninfo.rc
assets/: assets.go  index.html  login.html  manifest.json  serviceworker.js
doc/: build.md  changelog.md  changelog.txt  fever.md  formats.txt  hacking.md  install.md  rationale.txt  samples.yml  technotes.md  thirdparty.txt  todo.txt
etc/: dockerfile  dockerfile.arm  dockerfile.once  icon.icns  install-linux.sh  macos_package.sh  promo.xml  windows_versioninfo.sh
platform/: gui.go  guiless.go  icon_mac.go  icon_win.go
scripts/: bundle_assets.go  generate_versioninfo.go  package_macos.go
server/: assets_icon.go  assets_iconwin.go  auth.go  crawler.go  fever.go  handlers.go  response.go  router.go  server.go
src/: main.go  password.go  password_test.go  rationale.txt
storage/: feed.go  folder.go  http.go  item.go  settings.go  storage.go
template/: index.html
worker/: finder.go
(+263 files in other folders)
